# APAN5560-Assignment2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: api.py  cnn.py  infer.py  inference.py  labels.py  main.py  train_cifar10.py
models/: cnn_cifar10.pt
